wikipedia/common.css
/*
Add to
https://ru.wikipedia.org/wiki/Участник:<Username>/common.css
https://en.wikipedia.org/wiki/User:<Username>/common.css
#fff
#eee
#ddd
#ccc
#aaa
#666
#000

#FFE680
#87DE87
#FF8068

#D05F71
#5DCD95

:root {
	--color-background-color: #ccc;
}
var(--color-background)
*/

.infobox {
	border-color: 1px solid #ddd !important;
	border-spacing: 3px;
	background-color: #eee !important;
	color: black !important;
	margin: 0.5em 0 0.5em 1em;
	padding: 0.2em;
	float: right;
	clear: right;
	font-size: 88%;
	line-height: 1.5em;
}

.infobox > * > tr > td,
.infobox > * > tr > th {
	padding: 2px 5px;
	border-bottom: 1px solid #000 !important;
	border-top: 1px solid #eee !important;
	border-left: 1px solid #eee !important;
	border-right: 1px solid #eee !important;
	background: #eee !important;
}

.infobox a,
.infobox > * > tr:last-child > th,
.infobox > * > tr:last-child > td {
	border-color: 0
}

.infobox-above {
	font-size: 120%;
	text-align: center;
	background-color: #ccc !important;
}

.infobox-below {
	font-size: 120%;
	text-align: center;
	background-color: #ccc !important;
}

.infobox-header {
	font-size: 110%;
	text-align: center;
	background-color: #ccc !important;
}

.infobox.bordered td, .infobox.bordered th {
	background-color: #eee !important;
	border-color: 1px solid #ddd !important;
}

.navbox th, .navbox-abovebelow, .navbox-group, .navbox-subgroup, .navbox-title, th.navbox-group {
	background-color: #ccc !important;
}

#mw-content-text > div > table.infobox.vcard > tbody > tr:nth-child(odd) > td > div.mw-customtoggle-maps1.noprint.mw-customtoggle {
	background-color: #eee !important;
}

#mw-content-text > div > table.infobox.vcard > tbody > tr:nth-child(even) > td > div.mw-customtoggle-maps1.noprint.mw-customtoggle {
	background-color: #eee !important;
}

#mw-content-text > div > table.infobox.vcard > tbody > tr:nth-child(odd) > td {
	border-color: #eee !important;
	border-bottom: 1px solid #000 !important;
}

#mw-content-text > div > table:nth-child(2) > tbody > tr:nth-child(7) > td > table {
	border-color: 1px solid #ccc !important;
	background-color: #ccc !important;
}

#mw-content-text > div > table:nth-child(2) > tbody > tr:nth-child(7) > td > table > tbody > tr > td:nth-child(3) > table {
	background-color: #ccc !important;
}

#mw-content-text > div > table.infobox > tbody > tr:nth-child(26) > td {
	background-color: #eee !important;
}

#collapsibleTable0 > tbody > tr:nth-child(1) {
	background-color: #eee !important;
}

#mw-content-text > div > table > tbody > tr:nth-child(even) > th {
	background-color: #eee !important;
}

#mw-content-text > div > table > tbody > tr:nth-child(30) > td {
	background-color: #FFE680 !important;
	border-color: 1px solid #ddd !important;
}

#mw-content-text > div > table > tbody > tr:nth-child(31) > td {
	background-color: #FFE680 !important;
	border-color: 1px solid #ddd !important;
}

#mw-content-text > div > table > tbody > tr:nth-child(32) > td {
	background-color: #FFE680 !important;
	border-color: 1px solid #ddd !important;
}

#mw-content-text > div > table > tbody > tr:nth-child(32) > td:nth-child(1) {
	border-color: 1px solid #ddd !important;
}

#mw-content-text > div > table > tbody > tr:nth-child(33) > td {
	background-color: #FFE680 !important;
	border-color: 1px solid #ddd !important;
}

#mw-content-text > div > table > tbody > tr:nth-child(33) > td:nth-child(2) {
	border-color: 1px solid #ddd !important;
}

#mw-content-text > div > table.vertical-navbox.nowraplinks > tbody > tr:nth-child(1) > th {
	background-color: #ccc !important;
}

#mw-content-text > div > table.vertical-navbox.nowraplinks.hlist > tbody > tr:nth-child(odd) > th {
	background-color: #ccc !important;
}

#mw-content-text > div > table.vertical-navbox.nowraplinks.hlist > tbody > tr:nth-child(even) > td > table > tbody > tr:nth-child(2) > th {
	background-color: #ddd !important;
}

#mw-content-text > div > div:nth-child(1) {
	background-color: #eee !important;
	border-color: solid 1px #ddd !important;
}

#mw-content-text > div > div:nth-child(1) > table > tbody > tr > td > div {
	background-color: #eee !important;
	border-color: solid 1px #ddd !important;
}

#mw-content-text > div > div:nth-child(1) > table > tbody > tr > td > span {
	background-color: #eee !important;
	border-color: solid 1px #ddd !important;
}

#mw-content-text > div > table:only-child > tbody > tr:only-child > th {
	background: #ccc !important;
}

.ambox {
	margin: 0 10%;
	border-color: 1px solid #ddd !important;
	border-left: 10px solid #0062cc !important;
	background-color: #eee !important;
}

table.ambox + table.ambox {
	margin-top: 5px !important;
}





.catlinks {
	border-color: 1px solid #ddd !important;
	background-color: #eee !important;
	padding: 5px;
	margin-top: 1em;
	clear: both;
}

blockquote {
	padding-left: 10px;
	margin-left: 0;
	font-size: 11pt;
	color: #666 !important;
	border-left: 4px solid #aaa !important;
	overflow: auto;
}

div.tright, div.floatright {
	color: #666;
	border-color: 1px solid #ddd !important;
	background-color: #eee !important;
}

.mw-parser-output .ts-Начало_цитаты-quote {
	border: none;
}

.mw-parser-output .ts-Цитата-container {
	display: contents !important;
	background-color: #FFF !important;
}

.mw-parser-output .ts-Цитата-quote {
	color: #666;
	border-color: 1px solid #ddd !important;
	border-left: 4px solid #aaa !important;
	background-color: #eee !important;
	padding: 5px;
	padding-left: 10px;
	overflow: auto;
}

.mw-parser-output .ts-Цитата-leftQuote {
	display: none;
}

.mw-parser-output .ts-Цитата-rightQuote {
	display: none;
}


.mbox-image {
	border-color: none;
	padding: 2px 0 2px 0.9em;
	text-align: center;
	background-color: #eee !important;
}



table.plainlinks {
	border-color: 1px solid #ddd !important;
	background-color: #eee !important;
	padding: 5px;
	font-size: 95%;
}

div.NavHead {
	background-color: #ddd !important;
}
/* ... */

